--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -7,6 +7,10 @@
       content="script-src 'self' 'unsafe-inline'"
     />
     <title>Hello Electron React!</title>
+    <% if (process.env.NODE_ENV !== 'development') { %>
+    <!-- hack to make css with snapshot as html entrypoint -->
+    <link rel="stylesheet" href="./style.css" />
+    <% } %>
   </head>
   <body>
     <div id="root"></div>
